--- a/Desafio 1/Canal_Desafio_1.ipynb
+++ b/Desafio 1/Canal_Desafio_1.ipynb
@@ -6,7 +6,7 @@
         "id": "RLZkobfKwR8v"
       },
       "source": [
-        "# **Procesamiento del Lenguaje Natural - Desafío 1**\n",
+        "# **Procesamiento del Lenguaje Natural - Desafio 1**\n",
         "___________________________________________________________________________                          \n",
         "##*Facultad de Ingeniería de la Universidad de Buenos Aires*     \n",
         "##*Laboratorio de Sistemas Embebidos*                                            \n",
